TLS-Offloading-and-Load-Balancer/With-Cert-Manager/ingress.yaml
# What is kubernetes ingress ?
# https://www.youtube.com/watch?v=80Ew_fsV4rM&list=PLy7NrYWoggjziYQIDorlXjTvvwweTYoNC&index=11&t=902s

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    # cert-manager.io/issuer: letsencrypt-staging-issuer
    cert-manager.io/issuer: letsencrypt-prod-issuer
spec:
  tls:
    - hosts:
        - localhost.s7em.com
      secretName: tls-secret
  rules:
    - host: localhost.s7em.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-app-service
                port:
                  number: 8080
